# fast_encode_rs

./: Cargo.toml  LICENSE  README.md  test.utf16le
src/: detection.rs  lib.rs  main.rs  multibyte.rs  tables.rs
