[package]
name = "fast-encode"
version = "0.1.0"
edition = "2024"
description = "High-performance character encoding conversion library with enterprise features"
documentation = "https://docs.rs/fast-encode"
readme = "README.md"
repository = "https://github.com/your-org/fast-encode"
license = "MIT OR Apache-2.0"
keywords = ["encoding", "charset", "ebcdic", "utf8", "simd"]
categories = ["text-processing", "encoding", "command-line-utilities"]
authors = ["FastEncode Contributors"]
rust-version = "1.88"

[lib]
name = "fast_encode"
crate-type = ["lib"]

[[bin]]
name = "fast-encode"
path = "src/main.rs"

[dependencies]
# CLI dependencies
clap = { version = "4.5", features = ["derive", "color"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json", "dep:anyhow"]
simd = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
cargo-tarpaulin = "0.27"